DD-736: fixed scrollbar coloring

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -76,6 +76,7 @@ html, body {
     text-align: center;
     width: calc(100% - 20px);
     button {
+      line-height: 26px;
       margin: 0;
     }
   }
